# dotfiles-ng

./: .sops.yaml  AGENTS.md  ANUBIS-RESUME.md  CLAUDE.md  MOVISTAR-IPTV.md  NETWORK.md  PLAN-setup-template-generator.md  README.md  cli-references.md  flake.nix
.beads/: beads.db  beads.left.jsonl  beads.left.meta.json  config.yaml  issues.jsonl  last-touched  sync-state.json  sync_base.jsonl
.github/workflows/: ci.yml
.vardrun/: config.yaml  issues.jsonl
configs/: default.nix  dev.nix  flutter.nix  managed-remote-host.nix  network.nix  nginx-torrent.nix  nix-caches.nix  nvim_README.md  qbittorrent.nix  secrets.nix  server.nix  users.nix  wireguard-watchdog.nix
configs/bash/: default.nix
configs/deploy/: default.nix
configs/direnv/: default.nix
configs/fish/: default.nix
configs/ghostty/: default.nix
configs/git/: default.nix
configs/kitty/: default.nix  kitty.conf
configs/lazygit/: default.nix
configs/profiles/: qemu-guest.nix
configs/programs/: desktop-apps.nix  discord.nix  docker.nix  google-chrome.nix  libreoffice.nix  mattermost.nix  notion.nix  proton-drive.nix  slack.nix  (+3 more)
docs/: attic-garage.md  setup-template-usage.md
lib/: torrent.nix  user.nix
scripts/: migrate-opsplaza-couchdb.sh
secrets/: anubis.yaml  bastet.yaml  goose.yaml  ij-public-key.gpg  khonsu.yaml  khosu.yaml  macbook.yaml  pakhet.yaml  secrets.yaml  seshat.yaml
tools/setup-template/: Cargo.toml  README.md
tools/setup-template/src/: main.rs  render.rs  schema.rs  wizard.rs
tools/setup-template/tests/fixtures/: darwin.json  desktop-linux.json  server-linux.json
(+295 files in other folders)
