[package]
name = "setup-template"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Scaffold new host/user configs for the dotfiles flake"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
